# liron-utils

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test2.py
.git_hooks/: pre_commit.py  setup_hooks.py
.github/workflows/: README.md  ci.yml  publish.yml  python-build.yml  python-publish.yml  workflow.yml
Clone Submodules/: README.md
Export Module/: README.md  setup.py
MATLAB/Others/: BP.m
MATLAB/Others/Risk/: risk2.m
MATLAB/Others/Rope/: Rope2.m
MATLAB/Others/Shtatistics/Shtatistics/: Shtatistics.mlapp
MATLAB/Others/Shtatistics/Shtatistics - New Filter/: Shtatistics_NewFilter.mlapp
MATLAB/ambiguity_function/: cal_and_plot_acf_and_spec7.m  cal_and_plot_pamb7.m
MATLAB/utils/basic/: PATHS.m  boot.m  cdl.m  dbenable.m  ll.m  set_defaults.m  startup.m
MATLAB/utils/graphics/: create_figs.m  plot_ops.m
New Python Environment/: README.md  conda requirements.txt  new_env.sh  new_env_conda.sh  new_env_micromamba.sh  new_env_pip.sh  pip requirements.txt  pip_requirements.txt  pip_requirements_in.txt  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-07-20-graphics-plotly.md
docs/superpowers/specs/: 2026-07-20-graphics-plotly-design.md
files/: __init__.py  docx.py  files.py  json.py  pandas.py  pdf.py
git_hooks/: setup_hooks.py
graphics/: __init__.py  animations.py  axes.py  plotting.py
graphics/_tests/: _tests.py
graphics/utils/: COLORS.py  RC_PARAMS.py  __init__.py  default_kwargs.py  etc.py  rc_params.py
liron_utils/: __init__.py
liron_utils/Clone Submodules/: README.md
liron_utils/MATLAB/Others/: BP.m  cdt.m  delta_f.mlx  quiverc.m  sqroot.m  test_magic_matrix.m
liron_utils/MATLAB/Others/Risk/: risk1.m  risk2.m  riskGame.m
liron_utils/MATLAB/Others/Rope/: Rope.m  Rope2.m  rope_GUI.fig  rope_GUI.m
liron_utils/MATLAB/Others/Shtatistics/Shtatistics/: Shtatistics_old.mlapp
liron_utils/MATLAB/Others/Shtatistics/Shtatistics - Table/: Shtatistics_Table.mlapp
liron_utils/MATLAB/ambiguity_function/: ambfn7.m  cal_and_plot_amb_fn7.m  cal_and_plot_pamb7.m  calplotsig7.m
liron_utils/MATLAB/sphere3d/: sphere3d.m
liron_utils/MATLAB/utils/basic/: PATHS.m  boot.m  dbdisable.m  finish.m  startup.m
liron_utils/MATLAB/utils/graphics/: create_figs.m  plot_ops.m
liron_utils/MATLAB/utils/progressbar/: ProgressBar.m  progress.m  updateParallel.m
liron_utils/MATLAB/utils/progressbar/demos/: basicUseCases.m  countProcessedBytes.m  disableBar.m  nestedProgressBars.m  nonUnicodeProgressBar.m  parallelSetup.m  passSuccessInfo.m  printInfoDuringRun.m  titleBanner.m
liron_utils/MATLAB/utils/progressbar/tests/: ProgressBar_test.m  progress_test.m
liron_utils/New Python Environment/: README.md  new_env_conda.sh  new_env_poetry.sh  pyproject.toml
liron_utils/New Python Environment/old/: README.md  new_env_poetry.ps1  new_env_poetry.sh
liron_utils/files/: __init__.py  csv.py  docx.py  files.py  json.py  pdf.py
liron_utils/graphics/: __init__.py  axes.py  base.py  plotting.py
liron_utils/graphics/common/: COLORS.py  __init__.py  files.py  fitting.py  spectra.py
liron_utils/graphics/mpl/: __init__.py  axes.py  plotting.py
liron_utils/graphics/mpl/utils/: __init__.py  default_kwargs.py  rc_params.py
liron_utils/graphics/plotly/: __init__.py  figure.py  templates.py
liron_utils/graphics/utils/: COLORS.py  __init__.py  default_kwargs.py  etc.py  rc_params.py
liron_utils/machine_learning/: __init__.py  machine_learning.py
liron_utils/pure_python/: __init__.py  base.py  decorators.py  dicts.py  imports.py  logs.py  parallel.py  pip.py  prints.py  progress_bar.py
liron_utils/signal_processing/: __init__.py  base.py  fft.py  filter.py  filtering.py  fitting.py  signal.py  sp_audio.py  stats.py
liron_utils/symbolic_math/: __init__.py  base.py
liron_utils/time/: __init__.py  base.py
liron_utils/uncertainties_math/: __init__.py  base.py
liron_utils/web/: youtube_download.py
machine_learning/: machine_learning.py
pure_python/: __init__.py  base.py  dicts.py  imports.py  logs.py  os.py  parallel.py  parfor.py  pip.py  progress_bar.py
pure_python/_tests/: _logs.py  _parallel.py
signal_processing/: __init__.py  base.py  filter.py  fitting.py  sp_audio.py  stats.py
stubs/uncertainties/: __init__.pyi  core.pyi
symbolic_math/: base.py
tests/graphics/: _plotting.py  _tests.py  test_common_math.py  test_imports.py  test_plotly_figure.py  test_plotly_plotting.py  test_plotly_templates.py
tests/manim_animations/: plot_complex_functions.py  test__1.py
tests/pure_python/: _logs.py  _parallel.py
tests/uncertainties_math/: _tests.py
time/: base.py
uncertainties_math/: base.py
uncertainties_math/_tests/: _tests.py
