[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liron_utils"
version = "2025.08.22"
description = "Utilities module"
authors = [
    { name = "Liron Stettiner", email = "lironst1@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "natsort",
    "pandas",
    "sympy",
    "scikit-learn",
    "audioread",
    "soundfile",
    "manim",
    "uncertainties",
    "pytube",
    "PyPDF2"
]

[project.urls]
Homepage = "https://github.com/lironst1/liron_utils"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-dir]
"liron_utils" = "."
