[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0"
]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "liron-utils"
readme = "README.md"
dynamic = [
    "version",
]
description = "Utilities module"
authors = [
    { name = "Liron Stettiner", email = "lironst1@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "audioread",
    "colorama",
    "ipython",
    "kaleido",
    "matplotlib",
    "natsort",
    "numba",
    "numpy",
    "pandas",
    "pip",
    "pydantic-settings",
    "pydantic",
    "plotly",
    "scikit-learn",
    "scipy",
    "soundfile",
    "sympy",
    "tqdm",
    "uncertainties",
]
license = "MIT"

[project.optional-dependencies]
extra = [
    "docx",
    "manim",
    "pytube",
    "PyPDF2",
]
dev = [
    "black",
    "isort",
    "mypy",
    "pandas-stubs",
    "pylint",
    "pytest-mock",
    "pytest-mypy",
    "types-colorama",
    "types-protobuf",
    "types-pytz",
    "types-setuptools",
    "types-tabulate",
    "types-tqdm",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-mock",
    "pytest-xdist[psutil]",
]

[project.urls]
Homepage = "https://github.com/lironst1/liron-utils"


[tool.poetry]
packages = [
    { include = "liron_utils" },
]
include = [
    { path = ".flake8", format = "sdist" },
    { path = ".gitignore", format = "sdist" },
    { path = ".pre-commit-config.yaml", format = "sdist" },
    { path = "poetry.lock", format = "sdist" },
    { path = ".github/**/*.yml", format = "sdist" },
    { path = ".github/**/*.sh", format = "sdist" },
    { path = "tests/**/*.py", format = "sdist" },
]
version = "0.0.0"  # placeholder, replaced by poetry-dynamic-versioning

[tool.poetry.requires-plugins]
#poetry-plugin-export = ">=1.8"
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = "{{ base }}b0"

# Tox
[tool.tox]
env_list = [
    "style",
    "tests",
    "lint",
    "typing"
]

[tool.tox.env_run_base]
base_python = ["3.14"]

[tool.tox.env.style]
description = "Run style checks"
skip_install = true
deps = [
    "pre-commit"
]
commands = [
    #    ["pre-commit", "autoupdate"],
    ["pre-commit", "run", "--all-files"]
]

[tool.tox.env.tests]
description = "Run tests"
extras = [
    "tests",
]
commands = [
    ["pytest", "tests/"]
]

[tool.tox.env.lint]
description = "Run pylint"
deps = [
    "pylint"
]
commands = [
    ["pylint", "liron_utils/", "tests/"]
]

[tool.tox.env.typing]
description = "Run mypy"
extras = [
    "dev",
    "tests",
]
commands = [
    ["mypy", "liron_utils/", "tests/"]
]

[tool.black]
line-length = 120

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
mypy_path = "stubs"

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "audioread.*",
    "diskcache.*",
    "matplotlib.*",
    "numba.*",
    "natsort.*",
    "plotly.*",
    "pytest_mock.*",
    "scipy.*",
    "sklearn.*",
    "soundfile.*",
    "sympy.*",
    "torchaudio.*",
    "tqdm.*",
    "us.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "liron_utils.graphics.plotly.*",
]
disallow_subclassing_any = false

[tool.pylint.MASTER]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "wrong-import-order",
    "wrong-import-position",
]
enable = [
    "useless-suppression",
]

[tool.pylint.FORMAT]
max-line-length = 120
max-args = 8

[tool.pylint.BASIC]
const-naming-style = "UPPER_CASE"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring


    "R0903", # too-few-public-methods

    "W0511", # _fixme
]

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true

[tool.codespell]
skip = "*poetry.lock"
